--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#sobre">Sobre Mim</a></li>
                 <li><a href="#formacao">Formação</a></li>
-                <li><a href="#secao-portfolio"">Portfólio</a></li>
+                <li><a href="#secao-portfolio">Portfólio</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
